# cs344

./: .gitignore  Added-CMake-and-Win-Environment.patch  CMakeLists.txt  README.md  Win_Environment_EDIT_FIRST.bat  add_cmake.patch
Final/batcher/: batcher.cu  compare.h
Final/smooth/: compare.h  smooth.cu
Final/warpreduce/part_a/: compare.h  gputimer.h  warpreduce.cu
Final/warpreduce/part_b/: compare.h  warpreduce.cu
HW1/: HW1.cpp  Makefile  cinque_terre.gold  compare.cpp  main.cpp  reference_calc.cpp  student_func.cu
HW1/student/: CMakeLists.txt  HW1.cpp  Makefile  main.cpp  pymain.py  reference_calc.cpp  student_func.cu  timer.h
HW2/: CMakeLists.txt  HW2.cpp  Makefile  cinque_terre.gold  main.cpp  reference_calc.cpp  studentMain.py  student_func.cu  utils.h
HW3/: CMakeLists.txt  HW3.cpp  HW3.cu  HW3.h  Makefile  compare.cpp  compare.h  main.cpp  memorial.exr  memorial_png.gold  memorial_png_large.gold  pymain.py  reference_calc.cpp  reference_calc.h  student_func.cu
HW4/: CMakeLists.txt  HW4.cpp  HW4.cu  Makefile  loadSaveImage.cpp  main.cpp  reference_calc.cpp  reference_calc.h  student_func.cu
HW5/: CMakeLists.txt  Makefile  compare.cu  main.cu  reference.cpp  reference.h  reference_calc.h  student.cu
HW6/: CMakeLists.txt  HW6.cu  Makefile  blended.gold  compare.cpp  loadSaveImage.cpp  loadSaveImage.h  main.cpp  reference_calc.cpp  student_func.cu
Lesson Code Snippets/Lesson 2 Code Snippets/: associative.cu  atomics.cu  memory.cu
Lesson Code Snippets/Lesson 3 Code Snippets/: histo.cu
Lesson Code Snippets/Lesson 7 Code Snippets/thrust/: thrust_example.cu
Lesson Code Snippets/Lesson 7 Code Snippets/tiling/: tiling.cu  utils.h
Problem Sets/Problem Set 1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  student_func.cu  utils.h
Problem Sets/Problem Set 1-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Problem Sets/Problem Set 1/CMakeModules/: FindOpenCL.cmake
Problem Sets/Problem Set 1/HW1.dir/Release/HW1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HW1.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Problem Sets/Problem Set 2/: CMakeCache.txt  CMakeLists.txt  HW2  Makefile  compare.h  student_func.cu
Problem Sets/Problem Set 2-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Problem Sets/Problem Set 2_sh/: HW2  Makefile  cmake_install.cmake  compare.cpp  main.cpp  reference_calc.h  student_func.cu
Problem Sets/Problem Set 3/: CMakeLists.txt  Makefile  main.cpp  student_func.cu
Problem Sets/Problem Set 4/: HW4.vcxproj.filters  Makefile  cmake_install.cmake  loadSaveImage.cpp  loadSaveImage.h  main.cpp  red_eye_effect.gold  reference_calc.cpp  student_func.cu
Problem Sets/Problem Set 5/: HW5.vcxproj.filters  Makefile  cmake_install.cmake  main.cu  student.cu
Problem Sets/Problem Set 6/: HW6.vcxproj.filters  Makefile  cmake_install.cmake  student_func.cu
Unit2 Code Snippets/: hello_blockIdx.cu  hello_threadIdx.cu
Unit3 Code Snippets/: reduce.cu
Unit5 Code Snippets/: deviceQuery_simplified.cpp  transpose.cu
ps_list/Problem Set 2/: student_func.cu
ps_list/Problem Set 3/: loadSaveImage.cpp  utils.h
ps_list/Problem Set 4/: CMakeLists.txt  compare.h  main.cpp  reference_calc.h
ps_list/Problem Set 5/: main.cu  reference_calc.cpp  student.cu
ps_list/Problem Set 6/: reference_calc.h
ps_list/ps1/: CMakeLists.txt  HW1  HW1.cpp  Makefile  compare.cpp  compare.h  main.cpp  reference_calc.cpp  reference_calc.h  student_func.cpp  timer.h  utils.h
ps_list/ps2/: HW2  HW2.cpp  Makefile  main.cpp  reference_calc.cpp  student_func.cpp  utils.h
